Added login + redis sessions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,8 @@ postgres:
   environment:    
     POSTGRES_PASSWORD: psql_pass
     POSTGRES_USER: postgres
+
+redis:
+  image: redis
+  ports:
+    - "6379:6379"
